badge light for tx, fix vertical h5 alignment

--- a/src/pages/Dashboard/Views/Transactions/Transactions.scss
+++ b/src/pages/Dashboard/Views/Transactions/Transactions.scss
@@ -3,5 +3,9 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
+
+    h5 {
+      margin: 0;
+    }
   }
 }
